Made changes on image settings

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				
 				<div class="firstcard"> 
 				<picture class="thelogo"> 
-				<img src="icon-sedans.svg" alt="icon sedans" /> </picture> 
+				<img src="icon-sedans.svg" alt="icon sedans"> </picture> 
 				
 				<section class="content"> 
 				<h2 class="car-name">SEDANS</h2>
